# TemplateCppLibrary

./: .clang-format  BUILDING.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
pe/: CMakeLists.txt  sources.cmake
pe-cli/: CMakeLists.txt  sources.cmake
pe-cli/include/pe-cli/: command_line_parser.h
pe-cli/src/: command_line_parser.cpp  main.cpp
pe/include/pe/: pe_analyzer.h
pe/src/: pe_analyzer.cpp
pe/test/: CMakeLists.txt
pe/test/src/: pe_test.cpp
